add methods for update prompts